Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-3287

Reads a '\0'-terminated string from the QDataStream

XMLWordPrintable

    • 74098981b (dev), 05640b882 (6.5), 6e6466658 (tqtc/lts-5.15), 030793acc (6.6), cfe37ad35 (tqtc/lts-6.2)

      QDataStream & QDataStream::operator>> ( char *& s )

      does not scan for \0 even though documentation states so.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            fenglich Frans Englich (closed Nokia identity)
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: